--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,4 +37,4 @@
         <class1><img src="IMAGES\patient-medicine-therapy-physician-health-cartoon-doctor.png"/> </class1>
         
 </body>
-</html>
+</html> -->
